@@ -166,7 +166,7 @@ freebob_print_xml_description( freebob_handle_t freebob_handle,
 const char*
 freebob_get_version();
 
-const int
+int
 freebob_get_api_version();
 
 /* various function */
