@@ -45,7 +45,7 @@ freebob_get_version() {
     return PACKAGE_STRING;
 }
 
-const int
+int
 freebob_get_api_version() {
     return FREEBOB_API_VERSION;
 }
