@@ -1,3 +1,10 @@
+2006-08-27  Daniel Wagner  <wagi@monom.org>
+
+	* configure.ac: Version set to 1.4.0
+	* maudio device support infrastructure added. Implements
+	IAvDevice interface, discover reads the information from
+	an xml file. 
+
 2006-08-22  Daniel Wagner  <wagi@monom.org>
 
 	* configure.ac: Version bump to 1.3.0
